--- a/ChangeLog
+++ b/ChangeLog
@@ -5,6 +5,13 @@
 	* <changes go here...>
 
 *******************************************************************************
+MIT R5.0, ACL #9
+
+Tue Feb 03 09:17:57 1998    <layer@HOBART>
+
+	* clx0.cl: use excl::*version-info* instead of excl::*version*
+
+*******************************************************************************
 MIT R5.0, ACL #8
 
 Tue Dec 23 14:43:20 1997  duane@beta
