--- a/ChangeLog
+++ b/ChangeLog
@@ -5,6 +5,16 @@
 	* <changes go here...>
 
 *******************************************************************************
+MIT R5.0, ACL #10 (merge from #9 branch)
+
+*******************************************************************************
+MIT R5.0, ACL #9.1
+
+Thu Feb 12 19:55:44 1998  Kevin Layer  <layer@ultra>
+
+	* Makefile: add to `clean'
+
+*******************************************************************************
 MIT R5.0, ACL #9
 
 Tue Feb 03 09:17:57 1998    <layer@HOBART>
