--- a/ChangeLog
+++ b/ChangeLog
@@ -5,6 +5,13 @@
 	* <changes go here...>
 
 *******************************************************************************
+MIT R5.0, ACL #13
+
+Thu Apr 16 22:57:30 1998  Kevin Layer  <layer@ultra>
+
+	* dependent.cl: require :sock not :socket
+
+*******************************************************************************
 Tue Mar 31 19:53:42 1998  Kevin Layer  <layer@ultra>
 
 	* Makefile: move knowledge from cl/makedist.cl into this file on
