--- a/ChangeLog
+++ b/ChangeLog
@@ -5,6 +5,14 @@
 	* <changes go here...>
 
 *******************************************************************************
+MIT R5.0, ACL #14
+
+Tue Oct 27 13:37:38 1998  Kevin Layer  <layer@ultra>
+
+	* dependent.cl: fix bogus return value of host-address, which
+	caused X authorization to fail.
+
+*******************************************************************************
 MIT R5.0, ACL #13
 
 Thu Apr 16 22:57:30 1998  Kevin Layer  <layer@ultra>
