--- a/ChangeLog
+++ b/ChangeLog
@@ -5,6 +5,10 @@
 	* <changes go here...>
 
 *******************************************************************************
+MIT R5.0, ACL #15.1 -- join from acl50 branch onto armysttr branch
+next merge tag: acl50_to_armysttr_merge2
+
+*******************************************************************************
 MIT R5.0, ACL #15
 
 Tue Sep 29 10:55:59 1998  Duane Rettig  <duane@beta>
@@ -26,6 +30,14 @@ next merge tag: acl50_merge2
 *******************************************************************************
 MIT R5.0, ACL #14 -- join from acl50 branch (just version #13)
 next merge tag: acl50_merge1
+
+*******************************************************************************
+MIT R5.0, ACL #14
+
+Tue Oct 27 13:37:38 1998  Kevin Layer  <layer@ultra>
+
+	* dependent.cl: fix bogus return value of host-address, which
+	caused X authorization to fail.
 
 *******************************************************************************
 MIT R5.0, ACL #13
