--- a/ChangeLog
+++ b/ChangeLog
@@ -5,6 +5,13 @@
 	* <changes go here...>
 
 *******************************************************************************
+<no version change>
+
+1999-01-07    <layer@HOBART>
+
+	* CHANGES: move contents to CHANGES.mit
+
+*******************************************************************************
 MIT R5.0, ACL #14
 
 Tue Oct 27 13:37:38 1998  Kevin Layer  <layer@ultra>
