--- a/ChangeLog
+++ b/ChangeLog
@@ -5,6 +5,14 @@
 	* <changes go here...>
 
 *******************************************************************************
+MIT R5.0, ACL #16
+
+2000-03-10  Kevin Layer  <layer@ultra>
+
+	* Makefile: set MAKE_SHARED appropriately
+	* dependent.cl: fix require of :sock
+
+*******************************************************************************
 MIT R5.0, ACL #15
 
 Fri Mar  3 20:47:21 PST 2000  Duane Rettig  <duane@beta>
