--- a/ChangeLog
+++ b/ChangeLog
@@ -5,7 +5,14 @@
 	* <changes go here...>
 
 *******************************************************************************
-MIT R5.0, ACL #19 (where are the others?)
+MIT R5.0, ACL #20
+
+2000-06-28  Kevin Layer  <layer@ultra>
+
+	* dependent.cl: ssock -> sock
+
+*******************************************************************************
+MIT R5.0, ACL #19
 
 Sat Apr  8 20:47:21 PST 2000  Duane Rettig  <duane@beta>
 
