--- a/ChangeLog
+++ b/ChangeLog
@@ -5,6 +5,14 @@
 	* <changes go here...>
 
 *******************************************************************************
+MIT R5.0, ACL #22
+
+2001-06-01  Kevin Layer  <layer@crikey>
+
+	* excldep.cl: bug10812: from jkf: fix xlib:open-display (bug only
+	showed up on windows, but the fix was generic)
+
+*******************************************************************************
 <no version change>
 
 2001-05-29  Kevin Layer  <layer@crikey>
