--- a/ChangeLog
+++ b/ChangeLog
@@ -7,6 +7,10 @@
 *******************************************************************************
 MIT R5.0, ACL #22
 
+2001-06-18  Kevin Layer  <layer@crikey>
+
+	* excldep.cl: bug10812: from jkf: tweak fix
+
 2001-06-01  Kevin Layer  <layer@crikey>
 
 	* excldep.cl: bug10812: from jkf: fix xlib:open-display (bug only
