join from acl62 branch onto trunk

--- a/ChangeLog
+++ b/ChangeLog
@@ -5,6 +5,9 @@
 	* <changes go here...>
 
 *******************************************************************************
+join from acl62 to trunk on 7/9/02
+
+*******************************************************************************
 MIT R5.0, ACL #26
 
 2002-06-10  Kevin Layer  <layer@crikey>
