--- a/ChangeLog
+++ b/ChangeLog
@@ -5,6 +5,13 @@
 	* <changes go here...>
 
 *******************************************************************************
+<no version change>
+
+2002-08-09  Duane Rettig  <duane@beta>
+
+	* Makefile: Added power64 port
+
+*******************************************************************************
 MIT R5.0, ACL #26
 
 2002-06-10  Kevin Layer  <layer@crikey>
