--- a/ChangeLog
+++ b/ChangeLog
@@ -7,6 +7,11 @@
 *******************************************************************************
 <no version change>
 
+2003-04-30  Kevin Layer  <layer@crikey>
+
+    for bug12007:
+	* Makefile: add -lpthread on linux
+
 2002-08-09  Duane Rettig  <duane@beta>
 
 	* Makefile: Added power64 port
