--- a/ChangeLog
+++ b/ChangeLog
@@ -5,6 +5,13 @@
 	* <changes go here...>
 
 *******************************************************************************
+MIT R5.0, ACL #31
+
+2006-04-11  Duane Rettig  <duane@gemini>
+
+	* Makefile: Add Mactel port
+
+*******************************************************************************
 MIT R5.0, ACL #30
 
 Fri Jun 03 19:32:15 PST 2005  Duane Rettig  <duane@gemini>
