--- a/ChangeLog
+++ b/ChangeLog
@@ -5,6 +5,13 @@
 	* <changes go here...>
 
 *******************************************************************************
+MIT R5.0, ACL #34
+
+2007-04-19  Duane Rettig  <duane@franz.com>
+
+	* excldep.cl: bug16880: Fix sigpipe handling
+
+*******************************************************************************
 MIT R5.0, ACL #33
 
 2007-03-14  Duane Rettig  <duane@gemini>
